<resources>
    <string name="app_name">GetFit</string>
    <string name="app_name2">GetFit</string>
    <string name="quote_line_one">Be your Ideal Body</string>
    <string name="quote_line_two">by Exercising at home</string>
    <string name="get_start_btn">Get Start</string>
    <string name="content_desc">Picture</string>
    <string name="day_1">Day 1</string>
    <string name="chest">chest Exercise</string>
    <string name="day_2">Day 2</string>
    <string name="back">back Exercise</string>
    <string name="day_3">Day 3</string>
    <string name="abs">Abs Exercise</string>
    <string name="day_5">Day 5</string>
    <string name="arm">arm Exercise</string>
    <string name="day_6">Day 6</string>
    <string name="leg">leg Exercise</string>
    <string name="home">Home</string>
    <string name="tools">Tools</string>
    <string name="exeName">Exercise Name</string>
    <string name="exeReps">10x</string>
    <string name="note">Note: This medical calculator is not intended for children, pregnant or nursing women.</string>
    <string name="textHeight">Enter Height (cm)</string>
    <string name="textWeight">Enter Weight (kg)</string>
    <string name="calc_btn">CALCULATE</string>
    <string name="bmi_calc">Body Mass Index Calculator (BMI)</string>
    <string-array name="routineDays">
        <item>Day 1:</item>
        <item>Day 2:</item>
        <item>Day 3:</item>
        <item>Day 4:</item>
        <item>Day 5:</item>
        <item>Day 6:</item>
        <item>Day 7:</item>
    </string-array>

    <string-array name="routineName">
        <item>chest</item>
        <item>back</item>
        <item>abs</item>
        <item>rest</item>
        <item>arm</item>
        <item>leg</item>
        <item>rest</item>
    </string-array>

    <string-array name="ChestExerciseName">
        <item>push-up</item>
        <item>box push-up</item>
        <item>cobra stretch</item>
        <item>diamond push-up</item>
        <item>push-up with rotation</item>
        <item>spider-man push-up</item>
        <item>raised legs push-up</item>
        <item>mountain climber</item>
        <item>decline push-up</item>
        <item>incline push-up</item>
    </string-array>

    <string-array name="ChestExerciseReps">
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
    </string-array>

    <string-array name="BackExerciseName">
        <item>arm circles</item>
        <item>posterior plank</item>
        <item>hip-hinge hold</item>
        <item>Cobra</item>
        <item>Push-up with rotation</item>
    </string-array>

    <string-array name="BackExerciseReps">
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
    </string-array>

    <string-array name="AbsExerciseName">
        <item>reverse crunches</item>
        <item>leg raises</item>
        <item>high plank</item>
        <item>cobra</item>
        <item>push-up</item>
        <item>bridge</item>
        <item>scissors</item>
        <item>high knees running</item>
    </string-array>

    <string-array name="AbsExerciseReps">
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
    </string-array>

    <string-array name="ArmExerciseName">
        <item>arm circles</item>
        <item>triceps dips</item>
        <item>triceps dips on floor</item>
        <item>diamond push-up</item>
        <item>push-up</item>
        <item>punches</item>
        <item>raised legs push-up</item>
        <item>burpees</item>
    </string-array>

    <string-array name="ArmExerciseReps">
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
    </string-array>

    <string-array name="LegExerciseName">
        <item>scissors</item>
        <item>high knees running</item>
        <item>squat</item>
        <item>wall sit</item>
        <item>pile squat</item>
        <item>punches</item>
        <item>straight right leg raise</item>
        <item>straight left leg raise</item>
    </string-array>

    <string-array name="LegExerciseReps">
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>00:30</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
        <item>x10</item>
    </string-array>

    <string-array name="ToolName">
        <item>Body Mass Index Calculator (BMI)</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>