<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bmi_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/matching_accent"
    tools:context=".Tool.Calculator.BmiCalculator">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/BmiToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:theme="@style/ToolbarTheme"
        app:title="BMI"
        app:titleTextColor="@color/secondary" />


    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="70dp"
            >

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/textWeight"
                android:layout_marginEnd="30dp"
                android:inputType="numberDecimal"
                android:background="@drawable/border"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textColor="@color/secondary"
                android:textColorHint="@color/neutral"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/textHeight"
                android:inputType="numberDecimal"
                android:background="@drawable/border"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textColor="@color/secondary"
                android:textColorHint="@color/neutral"
                android:autofillHints="" />

        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/secondary"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:text="@string/calc_btn"
        android:textColor="@color/white"
        app:cornerRadius="15dp" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonCalculate"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/textViewPersonalMeasurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewResult"
        android:layout_marginTop="30dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:lastBaselineToBottomHeight="20dp"
        app:lineHeight="55dp" />

</RelativeLayout>