<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/matching_accent"
    android:id="@+id/exercisesItemsContainer"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/exercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="15sp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/day_1"
                        android:textAllCaps="true"
                        android:textColor="@color/neutral"
                        android:textSize="19sp" />

                    <TextView
                        android:id="@+id/routine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/chest"
                        android:textAllCaps="true"
                        android:textColor="@color/neutral"
                        android:textSize="18sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/exPic"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:contentDescription="@string/content_desc"
                 android:scaleType="centerCrop"
                    android:src="@drawable/chest"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

</LinearLayout>